buchungsübersicht verbessert und fahrzeugwahl button geändert

--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -27,7 +27,7 @@
 				<div class="col-md-6">
 					<p>@f.getBeschreibung</p>
 					<p>Preis pro Tag: @f.getPreisProTag Euro</p>
-					<button id="btn-anfrage" class="btn btn-danger" name=@f.getFahrzeugID type="submit">Auswählen</button>
+					<button id="btn-anfrage" class="btn btn-danger" name=@f.getFahrzeugID type="submit">Buchen</button>
 				</div>
 			</div>
 			</form>
