in der main die umlaute gesetzt

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -53,7 +53,7 @@
                         <a href="@routes.Application.ueberUns()">ÜberUns</a>
                     </li>
                     <li class="@("active".when(title == "Buchungsuebersicht"))">
-                        <a href="@routes.Application.buchungsuebersicht()">Buchungsuebersicht</a>
+                        <a href="@routes.Application.buchungsuebersicht()">Buchungsübersicht</a>
                     </li>
                 </ul> 
             </div>
