--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -21,6 +21,7 @@
 		<button id="button" onclick="dynamischesLaden()" type="button" class="btn btn-danger">Fahrzeuge Laden...</button>
 	</div> -->
 	<div id="container" class="col-md-6 col-md-offset-3"></div>
+	<div id="end" class="col-md-6 col-md-offset-3"></div>
 </div>
 
 }
