--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -5,19 +5,18 @@
 	var webSocket;
 	$(function() {
 		var WS = window["MozWebSocket"] ? MozWebSocket : WebSocket;
-		webSocket = new WS(
-				"@routes.Application.autoSocket().webSocketURL(request)");
+		webSocket = new WS("@routes.Application.autoSocket().webSocketURL(request)");
 		webSocket.onmessage = receiveEvent;
 	})
 	
 	function idSenden(idErsetzen) {
-		alert("Ich geh in idSenden");
 		ersetzen = idErsetzen;
 
 		var JsonString = {
 				AutoID:ersetzen
 		};
 		var JsonObj = JSON.stringify(JsonString);
+		alert("Ich geh in idSenden"+ JsonObj);
 		webSocket.send(JsonObj);
 	};
 	function receiveEvent(event) {
