ajax in eigene .js ausgelagert

--- a/app/views/fahrzeuguebersicht.scala.html
+++ b/app/views/fahrzeuguebersicht.scala.html
@@ -1,6 +1,8 @@
 @(eingeloggt : Int)
 @main("Fuhrpark") {
 
+<script language="javascript" src="@routes.Assets.at("javascripts/ajax.js")" type="text/javascript"></script>
+
 <div class="row">
 	<div class="col-md-1 col-md-offset-8">
 		@if(eingeloggt == 0){ 
