Gesamtpreis in F.auswahl berechnet

--- a/app/views/fahrzeugwahl.scala.html
+++ b/app/views/fahrzeugwahl.scala.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="col-md-6">
 					<p>@f.getBeschreibung</p>
-					<p>Preis pro Tag: @f.getPreisProTag Euro</p>
+					<p>Gesamtpreis: @f.getPreisProTag Euro</p>
 					<button id="btn-anfrage" class="btn btn-danger" onclick="idSenden('@f.getFahrzeugID')" name=@f.getFahrzeugID type="submit">Buchen</button>
 				</div>
 			</div>
