--- a/app/views/buchungsuebersicht.scala.html
+++ b/app/views/buchungsuebersicht.scala.html
@@ -15,7 +15,7 @@
 	<div class="col-md-6 col-md-offset-3">
 	@if(buchungen.isEmpty()){
 	<h4>Keine Bestellungen</h4>
-	<h4>für @email</h4>
+	<h4>Für @email</h4>
 	}else{
 		<h4>für @email</h4>
 		@for(b <- buchungen) {
