--- a/app/views/kontakt.scala.html
+++ b/app/views/kontakt.scala.html
@@ -20,10 +20,10 @@
 			<form action="mailto:viktorwich@@googlemail.com" enctype="text/plain" method="post" name="formular" onSubmit="return checkKontakt(this)">
 				<p><input type="text" placeholder="Name.." name="name" size="30" required></p>
 				<p><input type="email" placeholder="Email.." name="email" size="30" required></p>
-				<textarea name="nachricht" placeholder="Ihre Nachricht an uns.." rows="5" cols="45" required></textarea><br>
-				<p id ="dringend">Dringlichkeit:</p>
-				<p><input type="radio" name="Dringlichkeit" value="Hoch">HOCH
-				<input type="radio" name="Dringlichkeit" value="Normal">NORMAL</p>
+				<textarea name="nachricht" placeholder="Ihre Nachricht an uns.." rows="5" cols="40" required></textarea><br>
+				<p>Dringlichkeit:</p>
+				<p><input type="radio" name="Dringlichkeit" value="Hoch">Hoch
+				<input type="radio" name="Dringlichkeit" value="Normal">Normal</p>
 				<p><button type="reset">Eintragungen löschen</button></p>
 				<button id="btn-anfrage" type="submit" class="btn btn-danger" value="senden">Senden...</button>
 			</form>
